Update Grails to latest 4.1, DOC4J, Liquidbase, and POI to latest supported libraries