@@ -1,93 +1,24 @@
 buildscript {
     repositories {
         maven { url "https://repo.grails.org/grails/core" }
+        gradlePluginPortal()
     }
     dependencies {
         classpath "org.grails:grails-gradle-plugin:$grailsVersion"
         classpath "org.grails.plugins:views-gradle:2.0.4"
-        classpath "org.grails.plugins:hibernate5:7.0.0"
+        classpath "org.grails.plugins:hibernate5:7.0.5"
         classpath "gradle.plugin.com.github.erdi.webdriver-binaries:webdriver-binaries-gradle-plugin:2.0"
-        classpath "com.bertramlabs.plugins:asset-pipeline-gradle:3.0.10"
-        classpath 'org.glassfish.jaxb:jaxb-runtime:2.3.1'
-        classpath 'org.grails.plugins:database-migration:3.1.0'
+        classpath "com.bertramlabs.plugins:asset-pipeline-gradle:3.4.6"
+        classpath 'org.glassfish.jaxb:jaxb-runtime:4.0.0'
+        classpath 'org.grails.plugins:database-migration:4.1.0'
+        classpath 'jakarta.xml.bind:jakarta.xml.bind-api:4.0.0'
     }
 }
 
-def jvmOpenModulesArgs = [
-        "--add-opens=java.management/com.sun.jmx.mbeanserver=ALL-UNNAMED",
-        "--add-opens=java.base/java.io=ALL-UNNAMED",
-        "--add-opens=java.base/java.lang=ALL-UNNAMED",
-        "--add-opens=java.base/java.lang.annotation=ALL-UNNAMED",
-        "--add-opens=java.base/java.lang.invoke=ALL-UNNAMED",
-        "--add-opens=java.base/java.lang.module=ALL-UNNAMED",
-        "--add-opens=java.base/java.lang.ref=ALL-UNNAMED",
-        "--add-opens=java.base/java.lang.reflect=ALL-UNNAMED",
-        "--add-opens=java.base/java.math=ALL-UNNAMED",
-        "--add-opens=java.base/java.net=ALL-UNNAMED",
-        "--add-opens=java.base/java.net.spi=ALL-UNNAMED",
-        "--add-opens=java.base/java.nio=ALL-UNNAMED",
-        "--add-opens=java.base/java.nio.channels=ALL-UNNAMED",
-        "--add-opens=java.base/java.nio.channels.spi=ALL-UNNAMED",
-        "--add-opens=java.base/java.nio.charset=ALL-UNNAMED",
-        "--add-opens=java.base/java.nio.charset.spi=ALL-UNNAMED",
-        "--add-opens=java.base/java.nio.file=ALL-UNNAMED",
-        "--add-opens=java.base/java.nio.file.attribute=ALL-UNNAMED",
-        "--add-opens=java.base/java.nio.file.spi=ALL-UNNAMED",
-        "--add-opens=java.base/java.security=ALL-UNNAMED",
-        "--add-opens=java.base/java.security.acl=ALL-UNNAMED",
-        "--add-opens=java.base/java.security.cert=ALL-UNNAMED",
-        "--add-opens=java.base/java.security.interfaces=ALL-UNNAMED",
-        "--add-opens=java.base/java.security.spec=ALL-UNNAMED",
-        "--add-opens=java.base/java.text=ALL-UNNAMED",
-        "--add-opens=java.base/java.text.spi=ALL-UNNAMED",
-        "--add-opens=java.base/java.time=ALL-UNNAMED",
-        "--add-opens=java.base/java.time.chrono=ALL-UNNAMED",
-        "--add-opens=java.base/java.time.format=ALL-UNNAMED",
-        "--add-opens=java.base/java.time.temporal=ALL-UNNAMED",
-        "--add-opens=java.base/java.time.zone=ALL-UNNAMED",
-        "--add-opens=java.base/java.util=ALL-UNNAMED",
-        "--add-opens=java.base/java.util.concurrent=ALL-UNNAMED",
-        "--add-opens=java.base/java.util.concurrent.atomic=ALL-UNNAMED",
-        "--add-opens=java.base/java.util.concurrent.locks=ALL-UNNAMED",
-        "--add-opens=java.base/java.util.function=ALL-UNNAMED",
-        "--add-opens=java.base/java.util.jar=ALL-UNNAMED",
-        "--add-opens=java.base/java.util.regex=ALL-UNNAMED",
-        "--add-opens=java.base/java.util.spi=ALL-UNNAMED",
-        "--add-opens=java.base/java.util.stream=ALL-UNNAMED",
-        "--add-opens=java.base/java.util.zip=ALL-UNNAMED",
-        "--add-opens=java.datatransfer/java.awt.datatransfer=ALL-UNNAMED",
-        "--add-opens=java.desktop/java.applet=ALL-UNNAMED",
-        "--add-opens=java.desktop/java.awt=ALL-UNNAMED",
-        "--add-opens=java.desktop/java.awt.color=ALL-UNNAMED",
-        "--add-opens=java.desktop/java.awt.desktop=ALL-UNNAMED",
-        "--add-opens=java.desktop/java.awt.dnd=ALL-UNNAMED",
-        "--add-opens=java.desktop/java.awt.dnd.peer=ALL-UNNAMED",
-        "--add-opens=java.desktop/java.awt.event=ALL-UNNAMED",
-        "--add-opens=java.desktop/java.awt.font=ALL-UNNAMED",
-        "--add-opens=java.desktop/java.awt.geom=ALL-UNNAMED",
-        "--add-opens=java.desktop/java.awt.im=ALL-UNNAMED",
-        "--add-opens=java.desktop/java.awt.im.spi=ALL-UNNAMED",
-        "--add-opens=java.desktop/java.awt.image=ALL-UNNAMED",
-        "--add-opens=java.desktop/java.awt.image.renderable=ALL-UNNAMED",
-        "--add-opens=java.desktop/java.awt.peer=ALL-UNNAMED",
-        "--add-opens=java.desktop/java.awt.print=ALL-UNNAMED",
-        "--add-opens=java.desktop/java.beans=ALL-UNNAMED",
-        "--add-opens=java.desktop/java.beans.beancontext=ALL-UNNAMED",
-        "--add-opens=java.instrument/java.lang.instrument=ALL-UNNAMED",
-        "--add-opens=java.logging/java.util.logging=ALL-UNNAMED",
-        "--add-opens=java.management/java.lang.management=ALL-UNNAMED",
-        "--add-opens=java.prefs/java.util.prefs=ALL-UNNAMED",
-        "--add-opens=java.rmi/java.rmi=ALL-UNNAMED",
-        "--add-opens=java.rmi/java.rmi.activation=ALL-UNNAMED",
-        "--add-opens=java.rmi/java.rmi.dgc=ALL-UNNAMED",
-        "--add-opens=java.rmi/java.rmi.registry=ALL-UNNAMED",
-        "--add-opens=java.rmi/java.rmi.server=ALL-UNNAMED",
-        "--add-opens=java.sql/java.sql=ALL-UNNAMED"
-]
-
-version "0.27"
+version "0.28"
 group "goals"
 
+apply plugin:"groovy"
 apply plugin:"eclipse"
 apply plugin:"idea"
 apply plugin:"war"
@@ -99,6 +30,16 @@ apply plugin:"com.bertramlabs.asset-pipeline"
 
 repositories {
     maven { url "https://repo.grails.org/grails/core" }
+    mavenLocal()
+    mavenCentral()
+}
+
+sourceSets {
+    main {
+        resources {
+            srcDir 'grails-app/migrations'
+        }
+    }
 }
 
 configurations {
@@ -130,7 +71,7 @@ dependencies {
     compile "org.grails.plugins:views-json-templates"
     compile "org.grails.plugins:events"
     compile "org.grails.plugins:hibernate5"
-    compile "org.hibernate:hibernate-core:5.4.0.Final"
+    compile "org.hibernate:hibernate-core:5.4.18.Final"
     compile "org.grails.plugins:gsp"
     compileOnly "io.micronaut:micronaut-inject-groovy"
     console "org.grails:grails-console"
@@ -139,7 +80,7 @@ dependencies {
     runtime "com.h2database:h2"
     runtime "org.apache.tomcat:tomcat-jdbc"
     runtime "javax.xml.bind:jaxb-api:2.3.1"
-    runtime "com.bertramlabs.plugins:asset-pipeline-grails:3.0.10"
+    runtime "com.bertramlabs.plugins:asset-pipeline-grails:3.4.6"
     testCompile "org.grails:grails-gorm-testing-support"
     testCompile "org.mockito:mockito-core"
     testCompile "org.grails:grails-web-testing-support"
@@ -149,18 +90,24 @@ dependencies {
     testCompile "org.seleniumhq.selenium:selenium-support:3.14.0"
     testRuntime "org.seleniumhq.selenium:selenium-chrome-driver:3.14.0"
     testRuntime "org.seleniumhq.selenium:selenium-firefox-driver:3.14.0"
-    compile 'org.grails.plugins:spring-security-ui:4.0.0.M1'
-    compile 'org.grails.plugins:spring-security-core:4.0.0.RC2'
-    runtime 'mysql:mysql-connector-java:8.0.17'
-    compile ('org.apache.poi:poi:4.1.0') {
+    compile 'org.grails.plugins:spring-security-ui:4.0.0-RC1'
+    compile 'org.grails.plugins:spring-security-core:4.0.3'
+    compile 'org.mariadb.jdbc:mariadb-java-client:3.1.0'
+
+    compile ('org.apache.poi:poi:3.17') {
         exclude group: 'org.slf4j', module: 'slf4j-log4j12'
         exclude group: 'log4j', module: 'log4j'
     }
-    compile ('org.apache.poi:poi-ooxml:4.1.0') {
+
+    compile 'jakarta.xml.bind:jakarta.xml.bind-api:4.0.0'
+    compile 'org.glassfish.jaxb:jaxb-runtime:4.0.0'
+    compile 'jakarta.activation:jakarta.activation-api:2.1.0'
+
+    compile ('org.apache.poi:poi-ooxml:3.17') {
         exclude group: 'org.slf4j', module: 'slf4j-log4j12'
         exclude group: 'log4j', module: 'log4j'
     }
-    compile 'org.apache.poi:poi-ooxml-schemas:4.1.0'
+    compile 'org.apache.poi:poi-ooxml-schemas:3.17'
     compile 'org.grails.plugins:excel-import:3.0.2', {  exclude  module: 'poi-ooxml'
         exclude  module: 'poi'
         exclude  module: 'ooxml-schemas'
@@ -169,34 +116,31 @@ dependencies {
         exclude  module: 'poi'
         exclude  module: 'ooxml-schemas'
     }
-//    compile 'org.grails.plugins:database-migration:3.1.0.RC1'
-//    compile 'org.liquibase:liquibase-core:3.8.0'
-    compile 'org.grails.plugins:grails-melody-plugin:1.80.0'
-    compile ('org.docx4j:docx4j-core:11.1.3') {
+    compile 'org.grails.plugins:database-migration:4.1.0'
+    compile 'org.liquibase:liquibase-core:4.18.0'
+//    compile 'org.grails.plugins:grails-melody-plugin:1.80.0'
+    compile ('org.docx4j:docx4j-core:11.4.8') {
         exclude group: 'org.slf4j', module: 'slf4j-log4j12'
         exclude group: 'log4j', module: 'log4j'
     }
-    compile ('org.docx4j:docx4j-JAXB-ReferenceImpl:11.1.3') {
+    compile ('org.docx4j:docx4j-JAXB-ReferenceImpl:11.4.8') {
         exclude group: 'org.slf4j', module: 'slf4j-log4j12'
         exclude group: 'log4j', module: 'log4j'
     }
-    compile ('org.docx4j:docx4j-ImportXHTML:8.0.0') {
+    compile ('org.docx4j:docx4j-ImportXHTML:11.4.8') {
         exclude group: 'org.slf4j', module: 'slf4j-log4j12'
         exclude group: 'log4j', module: 'log4j'
     }
-    compile('javax.xml.bind:jaxb-api:2.3.0') {
-        exclude group: 'org.slf4j', module: 'slf4j-log4j12'
-        exclude group: 'log4j', module: 'log4j'
-    }
+
 }
 
 bootRun {
+    ignoreExitValue true
     jvmArgs(
         '-Dspring.output.ansi.enabled=always', 
         '-noverify', 
         '-XX:TieredStopAtLevel=1',
         '-Xmx1024m')
-    jvmArgs(jvmOpenModulesArgs)
     sourceResources sourceSets.main
     String springProfilesActive = 'spring.profiles.active'
     systemProperty springProfilesActive, System.getProperty(springProfilesActive)
@@ -212,15 +156,12 @@ tasks.withType(Test) {
     systemProperty "geb.build.reportsDir", reporting.file("geb/integrationTest")
     systemProperty "webdriver.chrome.driver", System.getProperty('webdriver.chrome.driver')
     systemProperty "webdriver.gecko.driver", System.getProperty('webdriver.gecko.driver')
-    jvmArgs = jvmOpenModulesArgs
 }
 
 tasks.withType(GroovyCompile) {
-    configure(groovyOptions.forkOptions) {
-        memoryMaximumSize = '4g'
-        jvmArgs = ['-Xms2g', '-Xmx4g']
+    configure(groovyOptions) {
+        forkOptions.jvmArgs = ['-Xmx4096m']
     }
-    options.forkOptions.jvmArgs = jvmOpenModulesArgs
 }
 
 tasks.withType(War) {
@@ -239,12 +180,4 @@ assets {
             targetLanguage: 'ES6', //Can go from ES6 to ES5 for those bleeding edgers
             optimizationLevel: 'WHITESPACE_ONLY' //Or ADVANCED or WHITESPACE_ONLY
     ]
-}
-
-sourceSets {
-    main {
-        resources {
-            srcDir 'grails-app/migrations'
-        }
-    }
 }
